--- a/Backend/parserProject/requirements.txt
+++ b/Backend/parserProject/requirements.txt
@@ -41,6 +41,7 @@ pyparsing==2.4.7
 pyresparser==1.0.6
 pyrsistent==0.18.0
 python-dateutil==2.8.2
+python-decouple==3.5
 pytz==2021.3
 regex==2021.11.10
 requests==2.26.0
